# visibilidade_comercial_apollo

./: .gitignore  README.md  automation_start.bat  iniciar_apollo.bat  transform_start.bat
python/: pyproject.toml
python/common/: common_browser.py  common_setup.py
python/data/: database_apollo.parquet
python/data/raw_extract_apollo_2026_04_17/: Alessandro_Step_1.csv  Alessandro_Step_2.csv  André_Step_1.csv  André_Step_2.csv  André_Step_4.csv  André_Step_5.csv  Antonio_Step_1.csv  Antonio_Step_2.csv  Antonio_Step_4.csv  master_apollo_2026_04_17.csv
python/projects/: run_apollo_extractor.py  run_apollo_sequence_contacts.py
python/projects/extract/: extract_apollo_sequence_contacts copy.py  extract_apollo_sequence_contacts.py  extract_apollo_sequences.py
python/projects/transform/: transform_apollo_contacts.py
